maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:27: error: not found: value estSurBaggle
while (!estSurBaggle) {
        ^