maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
def keepHandOnSideWall() {
	gauche
	if(estFaceMur) {
		droite
		if(estFaceMur) {
			droite
			if(estFaceMur) {
				droite
			} else {
				avance
			}
		} else {
			avance
		}
	} else {
		avance
	}
}
 // longe le mur à gauche

while(!estFaceMur) {
	avance
}//s'assure que le buggle est pres d'un mur

while (!estSurBaggle) {
keepHandOnSideWall
}
}


